--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Presentacion\Credito.Designer.cs">
       <DependentUpon>Credito.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\Creditos.cs" />
     <Compile Include="Presentacion\LogIn.cs">
       <SubType>Form</SubType>
     </Compile>
