--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -75,6 +75,12 @@
     <Compile Include="NetKits\LinqToExcel\Attribute\NecessaryColumnAttribute.cs" />
     <Compile Include="NetKits\LinqToExcel\Model\ConvertExcelMdl.cs" />
     <Compile Include="NetKits\LinqToExcel\ReadExcelExtend.cs" />
+    <Compile Include="Presentacion\Banco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Banco.Designer.cs">
+      <DependentUpon>Banco.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Credito.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentacion\Banco.resx">
+      <DependentUpon>Banco.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Credito.resx">
       <DependentUpon>Credito.cs</DependentUpon>
     </EmbeddedResource>
