--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Presentacion\Banco.Designer.cs">
       <DependentUpon>Banco.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\MASTER.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\MASTER.Designer.cs">
+      <DependentUpon>MASTER.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Cliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,8 +104,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Presentacion\Banco.resx">
-      <DependentUpon>Banco.cs</DependentUpon>
+    <EmbeddedResource Include="Presentacion\MASTER.resx">
+      <DependentUpon>MASTER.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Cliente.resx">
       <DependentUpon>Cliente.cs</DependentUpon>
@@ -177,6 +183,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Asuna01 50.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
