login 100% real no fake

--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -104,6 +104,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentacion\Banco.resx">
+      <DependentUpon>Banco.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\MASTER.resx">
       <DependentUpon>MASTER.cs</DependentUpon>
     </EmbeddedResource>
