--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -83,6 +83,18 @@
     <Compile Include="Presentacion\Banco.Designer.cs">
       <DependentUpon>Banco.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\CreditoCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\CreditoCliente.Designer.cs">
+      <DependentUpon>CreditoCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Empleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Empleados.Designer.cs">
+      <DependentUpon>Empleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\MASTER.cs">
       <SubType>Form</SubType>
     </Compile>
