--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Datos\Agregarclientes.cs" />
     <Compile Include="Datos\credito.cs" />
     <Compile Include="Datos\CRUD.cs" />
     <Compile Include="Datos\datatable.cs" />
