--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -96,6 +96,12 @@
     <Compile Include="Presentacion\Empleados.Designer.cs">
       <DependentUpon>Empleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\exportar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\exportar.Designer.cs">
+      <DependentUpon>exportar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\MASTER.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Banco.resx">
       <DependentUpon>Banco.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\exportar.resx">
+      <DependentUpon>exportar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\MASTER.resx">
       <DependentUpon>MASTER.cs</DependentUpon>
