--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Datos\CRUD.cs" />
     <Compile Include="Datos\datatable.cs" />
     <Compile Include="Datos\empleados.cs" />
+    <Compile Include="Datos\export.cs" />
     <Compile Include="Datos\Login.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
