--- a/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
+++ b/ProyectoProgra04/ProyectoProgra04/ProyectoProgra04.csproj
@@ -102,17 +102,17 @@
     <Compile Include="Presentacion\CreditoCliente.Designer.cs">
       <DependentUpon>CreditoCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentacion\Empleados.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Presentacion\Empleados.Designer.cs">
-      <DependentUpon>Empleados.cs</DependentUpon>
-    </Compile>
     <Compile Include="Presentacion\exportar.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Presentacion\exportar.Designer.cs">
       <DependentUpon>exportar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Import.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Import.Designer.cs">
+      <DependentUpon>Import.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\MASTER.cs">
       <SubType>Form</SubType>
@@ -150,11 +150,11 @@
     <EmbeddedResource Include="Presentacion\CreditoCliente.resx">
       <DependentUpon>CreditoCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentacion\Empleados.resx">
-      <DependentUpon>Empleados.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\exportar.resx">
       <DependentUpon>exportar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Import.resx">
+      <DependentUpon>Import.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\MASTER.resx">
       <DependentUpon>MASTER.cs</DependentUpon>
@@ -244,6 +244,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\chrome-trex-dinosaur.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fullimage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
